added changes for the swagger api
